# pamfilico-flask-collection

./: Dockerfile.test  README.md  docker-compose.test.yml  pyproject.toml  run-tests.sh
src/pamfilico_flask_collection/: __init__.py  filtering.py  pagination.py
tests/: test_integration.py  test_server.py
