[tool.poetry]
name = "pamfilico-flask-collection"
version = "1.0.0"
description = "Collection decorator with pagination, search, sorting, and filtering for Flask + SQLAlchemy APIs"
authors = ["Pamfilico"]
readme = "README.md"
packages = [{include = "pamfilico_flask_collection", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = ">=2.0.0"
marshmallow = ">=3.0.0"
sqlalchemy = ">=1.4.44"
pamfilico-flask-core = {git = "https://github.com/pamfilico/flask-core.git", rev = "6e147664904de434a075a1e7c1f61abf70f7c9df"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
requests = ">=2.28.0"
psycopg2-binary = ">=2.9.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
